styles/widgets/base/scheduler.less
/* ... */
.dx-scheduler-vertical-group-table-mixin() {
    .set-size(@size) {
        .dx-scheduler-work-space-horizontal-group-table {
            width: @size;
        }

        .dx-scheduler-date-table {
            margin-left: -(@size + @SCHEDULER_LEFT_COLUMN_WIDTH);

            .dx-scheduler-date-table-row:before,
            .dx-scheduler-all-day-table-row:before {
                width: @size + @SCHEDULER_LEFT_COLUMN_WIDTH;
            }

            .dx-rtl & {
                margin-right: -(@size + @SCHEDULER_LEFT_COLUMN_WIDTH);
                margin-left: 0;
            }
        } 
        
        .dx-scheduler-header-panel {
            .dx-scheduler-header-row:before {
                width: @size + @SCHEDULER_LEFT_COLUMN_WIDTH;
            }
        }


        .dx-scheduler-fixed-appointments {
            left: @size + @SCHEDULER_LEFT_COLUMN_WIDTH;

            .dx-rtl & {
                right: @size + @SCHEDULER_LEFT_COLUMN_WIDTH;
                left: 0;
            }
        }

        &.dx-scheduler-work-space-month {
            .dx-scheduler-sidebar-scrollable {
                width: @size;
            }

            .dx-scheduler-date-table-scrollable {
                margin-left: @size;
            }
            
            .dx-scheduler-header-scrollable.dx-scrollable {
                margin: 0 0 0 @size;
            }

            .dx-scheduler-date-table {
                margin-left: 0;

                 .dx-rtl & {
                    margin-right: 0;
                    margin-left: 0;
                }
            }

            .dx-scheduler-fixed-appointments {
                left: @size;

                 .dx-rtl & {
                    right: @size;
                    left: 0;
                }
            }

            .dx-scheduler-date-table-row:before,
            .dx-scheduler-header-row:before {
                width: @size;
            }
        }
    }


    &[dx-group-column-count='1'] {
        .set-size(@SCHEDULER_LEFT_COLUMN_WIDTH);
    }

    &[dx-group-column-count='2'] {
        .set-size(1.5 * @SCHEDULER_LEFT_COLUMN_WIDTH);
    }

    &[dx-group-column-count='3'] {
        .set-size(2 * @SCHEDULER_LEFT_COLUMN_WIDTH);
    }
}

.dx-scheduler-appointment-focused-mixin() {
    &.dx-state-focused {
        .box-shadow(none);

        &:before {
            pointer-events: none;
            content: "";
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
        }
    }
}
// T314382
.dx-scheduler-appointment-focused-mixin() when (@SCHEDULER_FILL_FOCUSED_APPOINTMENT = true) {
    &.dx-state-focused {
        background-color: @SCHEDULER_APPOINTMENT_START_COLOR;
    }
}
// T314382
.dx-scheduler-appointment-focused-mixin() when not (@SCHEDULER_FILL_FOCUSED_APPOINTMENT = true) {
    &.dx-state-focused {
        &:before {
            background-color: @SCHEDULER_APPOINTMENT_START_COLOR;
            opacity: .98;
        }
    }
}
/* ... */

