Fix other views visibility when two-level grouping

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -381,6 +381,20 @@
             }
         }
 
+        &.dx-scheduler-work-space-both-scrollbar {
+             .dx-scheduler-date-table-scrollable {
+                margin-left: @size + @SCHEDULER_LEFT_COLUMN_WIDTH  + 1px;
+            }
+
+            .dx-scheduler-fixed-appointments {
+                left: @size + @SCHEDULER_LEFT_COLUMN_WIDTH + 1px;
+            }
+
+             .dx-scheduler-header-scrollable.dx-scrollable {
+                margin: 0 0 0 @size + @SCHEDULER_LEFT_COLUMN_WIDTH + 1px;
+            }
+        }
+        
         &.dx-scheduler-work-space-month {
             .dx-scheduler-sidebar-scrollable {
                 width: @size;
@@ -2454,24 +2468,12 @@
         }
         
         &.dx-scheduler-work-space-both-scrollbar {
-            .dx-scheduler-date-table-scrollable {
-                margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH * 2 + 1px;
-            }
-
-            .dx-scheduler-fixed-appointments {
-                left: @SCHEDULER_LEFT_COLUMN_WIDTH * 2 + 1px;
-            }
-
             .dx-scheduler-date-table {
                 margin-left: 0
             }
 
             .dx-scheduler-all-day-table-row:before {
                 display: none;
-            }
-
-            .dx-scheduler-header-scrollable.dx-scrollable {
-                margin: 0 0 0 @SCHEDULER_LEFT_COLUMN_WIDTH * 2;
             }
 
             .dx-scheduler-sidebar-scrollable,
